ACS-7587 Reimplement cancellation cache